{rclone/rcserver,scyllaclient}: add sync/movedir (#2818)
This enables removing uploaded files when online.
